[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singing-voice"
version = "0.1.0"
description = "Librosa-powered audio preprocessing and stitching pipeline for Seed-VC workflows"
readme = "README.md"
authors = [
  { name = "Nigel Stuke" }
]
requires-python = ">=3.10"
dependencies = [
  "librosa>=0.10",
  "numpy>=1.24",
  "soundfile>=0.12",
  "typer>=0.9",
]

[project.optional-dependencies]
runpod = [
  "requests>=2.31"
]

[project.scripts]
svtool = "singing_voice.cli:app"

[tool.uv]
managed = true
cache-dir = ".uv/cache"

[tool.uv.sources]
singing-voice = { workspace = true }
